Enum role {

    provider

    customer

    admin

}



Table users {

    id uuid [pk]

    name varchar

    email varchar

    password varchar [null]

    role role

    phone_number varchar

    address varchar

    profile_picture varchar

    created_at datetime

    updated_at datetime

    is_online boolean [note: "boolean to check if user is online"]

    email_verification_token varchar

    email_verified_at datetime

    google_id varchar

    forgot_password_token varchar [note:"hashed"]

    email_verification_token_expires_at datetime

    forgot_password_token_expires_at datetime 

}



Enum payout_method {

    mobile_money

    bank

}



Enum momo_provider {

    mtn

    telecel

    airtel_tigo

}



Table providers {

    id uuid [pk]

    user_id uuid [ref: > users.id]

    is_verified boolean [null]

    payout_method payout_method

    momo_number varchar

    momo_provider momo_provider

    bank_account_number varchar

    bank_account_name varchar

    bank_code varchar

    total_jobs_completed int

    id_document_url varchar

    service_area varchar [note:"areas in the country the provider renders services"]

}


Table provider_services {

    id uuid [pk]

    provider_id uuid [ref: > providers.id, note:"referencing provider"]

    service_id uuid [ref: > services.id]

    price decimal

    created_at datetime

    updated_at datetime

}



Table categories {

    id uuid [pk]

    name varchar

    description varchar

    created_at datetime

    updated_at datetime

}



Table services {

    id uuid [pk]

    name varchar

    category_id uuid [ref: > categories.id]

    image varchar

    description varchar

    created_at datetime

    updated_at datetime

}



Enum booking_status {

    pending

    confirmed

    cancelled

    in_progress

    completed

}



Table bookings {

    id uuid [pk]

    customer_id uuid [ref: > users.id, note: "The user who requests the service"]

    provider_service_id uuid [ref: > provider_services.id]

    scheduled_at datetime

    booking_status booking_status

    customer_location varchar

    created_at datetime

    updated_at datetime

}



Table reviews {

    id uuid [pk]

    customer_id uuid [ref: > users.id, note: "Customer reviews the provider"]

    provider_user_id uuid [ref: > providers.user_id, note: "Provider is reviewed by the customer"]

    booking_id uuid [ref: > bookings.id]

    rating int

    comment varchar

    created_at datetime

    updated_at datetime

}



Enum payment_status {
    pending
    success
    cancelled
    failed
    refunded
}

Table payments {

    id uuid [pk]

    customer_id uuid [ref: > users.id]

    booking_id uuid [ref: > bookings.id]

    amount decimal

    payment_date datetime

    payment_status payment_status

    paystack_reference varchar

    created_at datetime

    updated_at datetime

}



Enum transaction_type {

    payout 

    payin

    refund

}



Enum transaction_status {

    pending

    completed

    cancelled

}



Table transactions {

    id uuid [pk]

    booking_id uuid [ref: > bookings.id]

    customer_user_id uuid [ref: > users.id]

    provider_user_id uuid [ref: > users.id]

    payment_id uuid [ref: > payments.id]

    amount decimal

    transaction_type transaction_type

    transaction_date datetime

    transaction_status transaction_status

    created_at datetime

    updated_at datetime

}



Table messages {

    id uuid [pk]

    content varchar

    conversation_id uuid [ref:> conversations.id]

    sender_id uuid [ref: > users.id]

    timestamp datetime

    is_seen boolean

    created_at datetime

    updated_at datetime

}



Table conversations {

    id uuid [pk]

    booking_id uuid [ref: > bookings.id, null]

    customer_id uuid [ref: > users.id]

    provider_id uuid [ref: > users.id]

    created_at datetime

    updated_at datetime

}

